--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,18 +12,24 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@better-auth/expo": "^1.2.7",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.69.2",
+    "@trpc/client": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "@trpc/tanstack-react-query": "^11.0.0",
+    "better-auth": "^1.2.7",
     "expo": "^52.0.44",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.8",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
+    "expo-sensors": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
@@ -36,11 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "better-auth": "^1.2.7",
-    "@better-auth/expo": "^1.2.7",
-    "@trpc/tanstack-react-query": "^11.0.0",
-    "@trpc/client": "^11.0.0",
-    "@trpc/server": "^11.0.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
