--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "lint": "turbo lint",
     "format": "turbo format"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-native-health": "^1.19.0"
+  },
   "devDependencies": {
-    "turbo": "^2.4.2",
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.0"
+    "lint-staged": "^15.5.0",
+    "turbo": "^2.4.2"
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
