--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
+    "react-native-health": "^1.19.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
