--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@better-auth/expo": "^1.2.7",
     "@expo/vector-icons": "^14.0.4",
+    "@kingstinct/react-native-healthkit": "^8.5.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -42,7 +43,6 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-health": "^1.19.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
