--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^11.0.0",
     "@trpc/tanstack-react-query": "^11.0.0",
     "better-auth": "^1.2.7",
+    "dayjs": "^1.11.13",
     "expo": "^52.0.44",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
