--- a/apps/native/tsconfig.json
+++ b/apps/native/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "module": "esnext"
   },
   "include": [
     "**/*.ts",
