--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -24,31 +24,31 @@
     "@trpc/tanstack-react-query": "^11.0.0",
     "better-auth": "^1.2.7",
     "dayjs": "^1.11.13",
-    "expo": "^52.0.44",
-    "expo-constants": "~17.0.8",
-    "expo-linking": "~7.0.5",
-    "expo-navigation-bar": "~4.0.8",
-    "expo-router": "~4.0.21",
-    "expo-secure-store": "~14.0.1",
+    "expo": "^53.0.7",
+    "expo-constants": "~17.1.5",
+    "expo-linking": "~7.1.4",
+    "expo-navigation-bar": "~4.2.4",
+    "expo-router": "~5.0.5",
+    "expo-secure-store": "~14.2.3",
     "expo-sensors": "^14.1.4",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "~0.20.0",
     "react-timer-hook": "^4.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
-    "@types/react": "~18.3.21",
+    "@types/rea --ct": "~19.0.10",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   },
