--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -24,11 +24,11 @@
     "@trpc/tanstack-react-query": "^11.0.0",
     "better-auth": "^1.2.7",
     "dayjs": "^1.11.13",
-    "expo": "^53.0.7",
-    "expo-constants": "~17.1.5",
+    "expo": "^53.0.8",
+    "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.4",
     "expo-navigation-bar": "~4.2.4",
-    "expo-router": "~5.0.5",
+    "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
     "expo-sensors": "^14.1.4",
     "expo-status-bar": "~2.2.3",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
-    "@types/rea --ct": "~19.0.10",
+    "@types/react": "~19.0.10",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   },
