--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "expo": "^53.0.8",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-linking": "~7.1.4",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.0.6",
